src/objects/ctcp__Custom_team_metadata__mdt.object
<CustomObject>
    <fields>
        <fullName>ctcp__AccesLevel__c</fullName>
        <label>AccesLevel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                    <default>true</default>
                    <label>Read</label>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ctcp__Lookup_in_object__c</fullName>
        <inlineHelpText>Select the Lookup field in Custom Team, related to the quickAction´s Object.</inlineHelpText>
        <label>Lookup in object</label>
        <metadataRelationshipControllingField>ctcp__Custom_team_metadata__mdt.ctcp__customTeamObject__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Custom_teams_Metadatas</relationshipLabel>
        <relationshipName>Custom_teams_Metadatas</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ctcp__ObjectShare__c</fullName>
        <label>ObjectShare</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ctcp__Record_Type__c</fullName>
        <inlineHelpText>Put the name of the record type on custom team object</inlineHelpText>
        <label>Record Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ctcp__Sharing_Reasons__c</fullName>
        <label>Sharing Reasons</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ctcp__customTeamObject__c</fullName>
        <description>Selected custom team object to become the controlling field</description>
        <inlineHelpText>Always Select Custom team</inlineHelpText>
        <label>customTeamObject</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Custom_teams_Metadatas</relationshipLabel>
        <relationshipName>Custom_teams_Metadatas</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ctcp__sObjectType__c</fullName>
        <description>Api name of the Object where the quick action is placed.</description>
        <inlineHelpText>Put the Api name of the Object where the quick action will be placed.</inlineHelpText>
        <label>sObjectType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Custom team metadata</label>
    <pluralLabel>Custom teams Metadatas</pluralLabel>
</CustomObject>